Fix spotbugs errors